Cleanup of residual code
