# backend/controllers/swaggerDoc.yaml
@@ -291,7 +291,7 @@ paths:
           description: Internal server error
 
   
-#swagger definition for the Profile Controller
+#swagger definition for the Publication Controller
   /api/publications:  
     post:             #Create new publication 
       tags:
@@ -342,112 +342,3 @@ paths:
         '500':
           description: Internal server error
     
- #Swagger Definition for the user controller
-  /api/users:
-    post:              #Create a new user
-      tags:
-        - User Controller
-      summary: Create a new user
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                userId:
-                  type: string
-                userName:
-                  type: string
-                email:
-                  type: string
-                imageUrl:
-                  type: string
-      responses:
-        '200':
-          description: User created successfully
-        '500':
-          description: Internal server error
-
-  /api/users/{userId}:
-    get:                #get user by user ID
-      tags:
-        - User Controller
-      summary: Get user by userId
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: string
-          description: User ID
-      responses:
-        '200':
-          description: User found
-        '404':
-          description: User not found
-        '500':
-          description: Internal server error
-
-#swagger definition for the Profile Controller
-  /api/profiles:  
-    post:             #Create new profile - takes userId and bio
-      tags:
-        - Profile Controller
-      summary: Create a new profile
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                userId:
-                  type: string
-                bio:
-                  type: string
-      responses:
-        '200':
-          description: Profile created successfully
-        '500':
-          description: Internal server error
-
-  /api/profiles/userid{userId}:
-    get:                           #Get Profiles by userId
-      tags:
-        - Profile Controller
-      summary: Get profile by userId
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: string
-          description: User ID
-      responses:
-        '200':
-          description: Profile found
-        '404':
-          description: Profile not found
-        '500':
-          description: Internal server error
-
-  /api/profiles/bio{bio}:        
-    get:                                      #Get Profiles by bio
-      tags:
-        - Profile Controller
-      summary: Get profile by bio
-      parameters:
-        - name: bio
-          in: path
-          required: true
-          schema:
-            type: string
-          description: bio
-      responses:
-        '200':
-          description: Profile found
-        '404':
-          description: Profile not found
-        '500':
-          description: Internal server error
